# python-for-semiconductors-

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_CD_MODERNIZATION_SUMMARY.md  CLEANUP_SUMMARY.md  CODEBASE_REVIEW_ACTION_ITEMS.md  Dockerfile  Dockerfile.api  LICENSE  README.md  README.md.backup  RELEASE_NOTES_v1.0.md  STREAMLIT_QUICKSTART.md  TASKS_CLEANUP_SUMMARY.md  TASKS_UPDATE_SUMMARY.md  VSCODE_TASKS_QUICK_REF.md  bandit.yaml  demonstrate_2025_ai_trends.py  docker-compose.yml  env_setup.py  mypy.ini  pyproject.toml  pytest.ini  requirements-2025-ai-trends.txt  requirements-advanced.txt  requirements-basic.txt  requirements-full.txt  requirements-intermediate.txt  requirements-streamlit.txt  requirements.txt  verification.py  verify_dataset_paths.py
.dvc/: config
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_issue.md  feature_request.md  project_task.md  question.md
.github/workflows/: ci.yml  projects-triage.yml
.hypothesis/constants/: 022671e2e5d7b198  03ab1e6e6bb21915  0aff081405263263  138be2f871d5f023  2d25023202421037  2f2b67ed264540fb  317d4461a4c8f165  375e996620efe363  3aace875fd7263ef  3e82ec3f36e42836  491b9127715c5b2b  4a4a8a85179b27a7  5c45ff96dcfb81c0  652f270b3718767e  6795acd58e4ca5e5  67b0a8ccf18bf5d2  70c2241423f14e15  725ac9e842270c84  740d5b34a29cc934  7c350889ecb03a5e  8299b467f5199d63  83c244b0ff071a93  8ce26339ddfe3cb4  8e4d86ee059b30cd  8fb6c7d34e76fd58  919e9cc21bbfd127  9fa7e6f37c9bd979  a338c89124fd60eb  aad1f427b8981530  afd1e78407c8c9a8  b2266a44296ef8b3  b51812b76ece7fcd  b829c330a2517282  b99b0d87be952f5a  c443a1cd4ca27b28  c782af2d3d8a2b84  ca103af0de89b4b9  ca8a3a855f6346f1  cee2e13259d12557  d2b72496fefbd262  (+5 more)
assessment_data/: test-user_module-3_knowledge_check_1758842597.json
assessments/: README.md  STREAMLIT_APP_README.md  WEEK_3_CONTENT_PROGRESS.md  WEEK_4_TESTING_PROGRESS.md  WEEK_4_UPDATE.md  assessment_app.py  schema.json  validate_module_10_1.py  validate_module_10_2.py  validate_module_10_3.py  validate_module_10_4.py  validate_module_11_1.py  validate_module_4_3.py  validate_module_6_1.py  validate_module_6_2.py  validate_module_7_1.py  validate_module_7_2.py  validate_module_8_1.py  validate_module_8_2.py  validate_module_9_1.py  validate_module_9_2.py  validate_module_9_3.py  validate_phase_2_1.py  validate_phase_2_2.py  validate_phase_2_3.py  validate_phase_2_4.py  validate_phase_2_5.py  validate_phase_2_6.py
assessments/module-1/: 1.1-questions.json  1.2-questions.json
assessments/module-10/: 10.1-questions.json  10.2-questions.json  10.3-questions.json  10.4-questions.json
assessments/module-11/: 11.1-questions.json
assessments/module-2/: 2.1-questions.json  2.2-questions.json  2.3-questions.json
assessments/module-3/: 3.1-questions.json  3.2-questions.json
assessments/module-4/: 4.1-questions.json  4.2-questions.json  4.3-questions.json
assessments/module-5/: 5.1-questions.json  5.2-questions.json
assessments/module-6/: 6.1-questions.json  6.2-questions.json
assessments/module-7/: 7.1-questions.json  7.2-questions.json
assessments/module-8/: 8.1-questions.json  8.2-questions.json
assessments/module-9/: 9.1-questions.json  9.2-questions.json  9.2-questions.json.bak  9.3-questions.json
assessments/templates/: coding_exercise.json  conceptual_question.json  multiple_choice.json
assessments/validation/: README.md  validate_all.py
datasets/: DATASET_USAGE_GUIDE.md  README.md  WM811K_INTEGRATION_GUIDE.md  data_validation.py  download_semiconductor_datasets.py  synthetic_generators.py  test_dataset_enhancements.py  wm811k_preprocessing.py
datasets/secom/: README.md
datasets/steel-plates/: README.md  metadata.txt
datasets/time_series/: README.md
datasets/vision_defects/: README.md
datasets/wm811k/: README.md  README_fetch.txt
docs/: 2025-AI-INDUSTRY-TRENDS.md  CONTRIBUTING.md  QUICK_REFERENCE_4WEEK_PLAN.md  SERIES_ANNOUNCEMENT.md  TROUBLESHOOTING.md  api-documentation.py  assessment-framework.md  industry-case-studies.md  performance-benchmarking.py  projects-board-setup.md  setup-guide.md
docs-site/: BUILD_INSTRUCTIONS.md  mkdocs.yml
docs-site/docs/: index.md
docs-site/site/: 404.html  index.html
docs/architecture/: 001-educational-framework-architecture.md  002-assessment-system-design.md
projects/: PROJECTS_BACKLOG.md  README.md
tests/: __init__.py  conftest.py  test_2025_ai_trends_integration.py  test_assessment_system.py  test_integration.py  test_notebook_execution.py  test_property_based.py
tools/: compile_tier_lockfiles.py  find_in_file.py  fix_notebook_datadir.py  print_nb_lines.py
(+457 files in other folders)
